syntax = "proto3";
package protocol;

message UnPin {
    bytes fileHash = 1;
    bytes password = 2;
}